Fixed width of menu on small viewports

--- a/src/styles/slide-menu.scss
+++ b/src/styles/slide-menu.scss
@@ -33,6 +33,7 @@ $sm-transition-easing: ease-in-out !default;
 		position: absolute;
 		top: 0;
 		left: 0;
+		width: 100%;
 		transition: transform $sm-transition-dur $sm-transition-easing;
 		transform: translateX(0);
 		will-change: transform;
@@ -43,6 +44,7 @@ $sm-transition-easing: ease-in-out !default;
 
 		position: relative;
 		width: $sm-menu-width;
+		max-width: 100%;
 		margin: 0;
 
 		ul {
